// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Has Provider should not provide "Has ..." value suggestion when multiple values exists 1`] = `
[
  "Exclude label",
  "triage",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`Has Provider should not provide "Has" as a key suggestion when hasValue is undefined or false 1`] = `
[
  "Label",
  "Exclude",
]
`;

exports[`Has Provider should not provide suggestion for filter provider previously used 1`] = `
[
  "Milestone",
]
`;

exports[`Has Provider should not provide suggestion for filter provider previously used in the same block 1`] = `
[
  "Milestone",
]
`;

exports[`Has Provider should provide "Has ..." value suggestion when value is empty 1`] = `
[
  "No label",
  "Has label",
  "Exclude label",
  "triage",
  "a11y",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`Has Provider should provide "Has" as a key suggestion for single provider 1`] = `
[
  "Has",
]
`;

exports[`Has Provider should provide "Has" as a key suggestion for single provider 2`] = `
[
  "Label",
]
`;
